--- a/app/src/main/res/layout/content_activity__contactos.xml
+++ b/app/src/main/res/layout/content_activity__contactos.xml
@@ -14,12 +14,14 @@
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
+
         <TextView
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Grupo de Ayuda"
             android:layout_gravity="center"
-            />
+            android:text="Grupo de Ayuda"
+            android:textColor="@android:color/background_dark"
+            android:textSize="25sp" />
 
 
         <android.support.design.widget.TextInputLayout
@@ -29,8 +31,9 @@
 
             <EditText
                 android:id="@+id/nombreId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="263dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="60dp"
                 android:hint="Nombre" />
         </android.support.design.widget.TextInputLayout>
 
@@ -42,17 +45,19 @@
 
             <EditText
                 android:id="@+id/numeroId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="263dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="60dp"
                 android:hint="Numero de telefono"
                 android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/btnGuardar"
-            android:layout_width="match_parent"
+            android:layout_width="332dp"
             android:layout_height="wrap_content"
 
+            android:layout_marginLeft="20dp"
             android:text="Guardar" />
 
         <ListView
