--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
 
-    <color name="colorPrimary" tools:ignore="MissingDefaultResource">#FF9800</color>
-    <color name="colorPrimaryDark">#F57C00</color>
+    <color name="colorPrimary" tools:ignore="MissingDefaultResource">#ff9800</color>
+    <color name="colorPrimaryDark">#f57c00</color>
 
-    <color name="colorAccent">#FFC107</color>
+    <color name="colorAccent">#ffc107</color>
 </resources>
