--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -95,8 +95,8 @@
 
     <TextView
         android:id="@+id/mensaje_id2"
-        android:layout_width="184dp"
-        android:layout_height="39dp"
+        android:layout_width="181dp"
+        android:layout_height="54dp"
         android:layout_marginStart="173dp"
         android:layout_marginLeft="173dp"
         android:layout_marginTop="8dp"
@@ -109,24 +109,24 @@
 
     <Button
         android:id="@+id/btnGuardar"
-        android:layout_width="241dp"
-        android:layout_height="124dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginLeft="72dp"
+        android:layout_width="217dp"
+        android:layout_height="181dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="63dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginRight="71dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
         android:layout_marginBottom="108dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/boton_redondo"
         android:elevation="1dp"
         android:text="Enviar Mensaje "
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.318"></Button>
+        app:layout_constraintVertical_bias="0.059"></Button>
     </android.support.constraint.ConstraintLayout>
 
 
