--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,18 +6,18 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/login"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_manage"
             android:title="Iniciar Sesion" />
         <item
             android:id="@+id/contactos"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Contactos"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Grupo de Ayuda"
             />
 
         <item
             android:id="@+id/informacion"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Informacion de la App"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Sitio Web"
             />
        
 
